--- a/src/components/css/CalendarCell.css
+++ b/src/components/css/CalendarCell.css
@@ -1,12 +1,28 @@
-.calendarcellul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  max-height: 60px; /* 최대 높이 지정 */
-  overflow-y: auto; /* 넘치는 경우 스크롤바 표시 */
+@import url("https://rsms.me/inter/inter.css");
+html {
+  font-family: "Inter", sans-serif;
+}
+@supports (font-variation-settings: normal) {
+  html {
+    font-family: "Inter var", sans-serif;
+  }
 }
 
 .calendarcellli {
-  padding: 5px 0;
-  height: 20px; /* 고정된 높이 */
+  line-height: 1;
+  white-space: nowrap; /* 텍스트가 한 줄로 유지되도록 설정 */
+  overflow: hidden; /* 넘치는 텍스트를 숨깁니다. */
+  text-overflow: ellipsis; /* 텍스트가 잘리는 경우 '...'을 표시합니다. */
+  font-size: 10px;
+  margin-top: 1px;
 }
+.dayLabel {
+  margin-left: 0;
+  padding: 0;
+  margin-top: 0;
+  font-weight: bold;
+  font-size: 10px;
+}
+/* .cellTd {
+  overflow-y: scroll;
+} */
