--- a/src/components/css/EventList.css
+++ b/src/components/css/EventList.css
@@ -1,6 +1,15 @@
+@import url("https://rsms.me/inter/inter.css");
+html {
+  font-family: "Inter", sans-serif;
+}
+@supports (font-variation-settings: normal) {
+  html {
+    font-family: "Inter var", sans-serif;
+  }
+}
 .eventBox {
-  width: 500px;
-  height: 850px;
+  width: 400px;
+  height: 80vh;
   border: 1px solid #dbdbdb;
   border-radius: 30px;
   align-items: center;
@@ -14,16 +23,23 @@
   border: 0;
   box-sizing: border-box;
 }
-.eventBoxHeader h2 {
+
+.eventBoxHeaderDay {
+  font-family: "inter";
+  font-weight: bold;
+  font-size: 30px;
+}
+.eventBoxHeaderMonth {
+  font-family: "inter";
+  font-weight: bold;
   margin: 20px;
 }
 
 .eventBoxHeader {
-  height: 100px;
+  height: 70px;
   box-sizing: border-box;
   align-items: center;
   line-height: 100px;
-
   /* background-color: blue; */
   margin-left: 40px;
   display: flex;
@@ -31,34 +47,40 @@
 }
 
 .eventBoxList {
-  height: 600px;
+  height: 400px;
   background-color: aliceblue;
-  margin: 20px;
+  /* margin: 20px; */
+  margin-left: 20px;
+  margin-right: 20px;
+  overflow-y: scroll;
 }
 .eventBoxFooter {
-  height: 100px;
+  height: 50px;
   display: flex;
   justify-content: center;
-
-  margin-right: 30px;
+  align-items: center;
+  /* background-color: aliceblue; */
+  margin-right: 20px;
+  margin-left: 20px;
 }
 .eventBoxFooter-input {
   border-radius: 30px;
   border: 3px solid #dbdbdb;
   margin-left: 10px;
   width: 400px;
-  height: 50px;
-  margin-top: 10px;
+  height: 30px;
 }
 .eventBoxListAdd {
-  border-radius: 15px;
-  height: 50px;
-  width: 50px;
-  margin-top: 14px;
+  border-radius: 10px;
+  height: 30px;
+  width: 30px;
+
   margin-left: 10px;
   background-color: #c5ffab;
   border: none;
-  font-size: 40px;
+  font-size: 20px;
+  font-family: "inter";
+  font-weight: bold;
 }
 .eventBoxListAdd:hover {
   opacity: 0.7;
