--- a/src/components/css/EventListRow.css
+++ b/src/components/css/EventListRow.css
@@ -1,7 +1,37 @@
-.Vector-4 {
+.eventListRowVector {
   width: 10px;
-  height: 100px;
+  height: 50px;
   flex-grow: 0;
   margin: 0 28.1px 0 21.9px;
   background-color: #c5ffab;
+}
+
+.eventListRowWrap {
+  display: flex; /* 수직 정렬을 위해 flex 사용 */
+  justify-content: center; /* 수평 가운데 정렬 */
+  align-items: center; /* 수직 가운데 정렬 */
+  margin-top: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+.eventIcon {
+  margin-left: 20px;
+}
+
+.eventListTitle {
+  font-family: "Inter";
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.eventListRowWrap > * {
+  margin-right: 10px;
+}
+
+.eventListContent {
+  width: 200px; /* 요소의 고정된 너비 설정 */
+  white-space: nowrap; /* 텍스트가 한 줄로 유지되도록 설정 */
+  overflow: hidden; /* 넘치는 텍스트를 숨깁니다. */
+  text-overflow: ellipsis; /* 텍스트가 잘리는 경우 '...'을 표시합니다. */
 }
