--- a/src/components/css/PTCalendar.css
+++ b/src/components/css/PTCalendar.css
@@ -1,35 +1,52 @@
+@import url("https://rsms.me/inter/inter.css");
+html {
+  font-family: "Inter", sans-serif;
+}
+@supports (font-variation-settings: normal) {
+  html {
+    font-family: "Inter var", sans-serif;
+  }
+}
+
 .calendar {
   width: 100%; /* 달력 최대 너비 설정 */
   height: 80vh; /* 달력 높이 설정 */
   max-width: 100%; /* 최대 너비 설정 */
   max-height: 100%; /* 최대 높이 설정 */
   margin: 0 auto; /* 가운데 정렬 */
-  border: 1px solid black; /* 테두리 추가 */
+  margin-left: 10px;
+  border: 1px solid #dbdbdb; /* 테두리 추가 */
+  border-radius: 15px;
 }
 .calendar table {
   width: 100%;
   height: 90%;
   border-collapse: collapse;
+  table-layout: fixed; /* 셀의 너비를 고정값으로 설정 */
 }
 
 .calendar th,
 .calendar td {
-  padding: 20px; /* 셀 안의 패딩 설정 */
-  text-align: left; /* 텍스트 정렬을 왼쪽으로 설정 */
-  vertical-align: top; /* 텍스트 수직 정렬을 위로 설정 */
-  cursor: pointer; /* 클릭 가능한 커서 설정 */
-  width: calc(100% / 7); /* 셀 너비를 동일하게 설정 */
-  box-sizing: border-box; /* 패딩과 테두리를 포함한 크기 계산 */
+  text-align: left;
+  vertical-align: top;
+  cursor: pointer;
+  width: calc(100% / 7);
+  /* overflow: hidden; */
+  box-sizing: border-box;
 }
 
 .calendar td:hover {
-  background-color: #f0f0f0; /* 호버 시 배경색 변경 */
+  background-color: #f0f0f0;
 }
 
 .calendar .fc-day-number {
-  display: block; /* 블록 레벨 요소로 변경하여 위로 정렬 */
+  display: block;
 }
-
+.headerCSpan {
+  font-family: "inter";
+  font-size: 20px;
+  font-weight: bold;
+}
 .headerC {
   display: flex;
   justify-content: space-around;
@@ -44,6 +61,12 @@
   opacity: 0.7;
   cursor: pointer;
 }
+.moveimghover {
+  width: 40px;
+  height: 40px;
+}
 .calendar tbody tr {
-  height: calc(100% / 6); /* 행의 높이를 동일하게 설정 (6은 행의 개수입니다) */
+  overflow: hidden;
+  height: calc(100% / 6);
+  /* 행의 높이를 동일하게 설정 (6은 행의 개수입니다) */
 }
