--- a/src/components/css/EventList.css
+++ b/src/components/css/EventList.css
@@ -48,7 +48,6 @@ html {
 
 .eventBoxList {
   height: 400px;
-  background-color: aliceblue;
   /* margin: 20px; */
   margin-left: 20px;
   margin-right: 20px;
@@ -83,6 +82,10 @@ html {
   font-weight: bold;
 }
 .eventBoxListAdd:hover {
+  opacity: 0.7;
+  cursor: pointer;
+}
+.eventItem:hover {
   opacity: 0.7;
   cursor: pointer;
 }
